# backend-fiberblu

./: .env_exemplo  .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: .env_exemplo  settings.py  urls.py
fiberblu/: admin.py  apps.py  models.py  serializers.py  views.py
fiberblu/migrations/: 0001_initial.py  0002_compra.py  0002_linhaproduto.py  0003_grupoproduto_produto.py  0003_itenscompra.py  0004_categoriaempresa_empresa.py  0004_remove_produto_codigo_alter_pedido_data.py  0005_pagamento.py  0005_representante.py  0006_pedido.py  0006_rename_nome_pagamento_descricao_pedido_pagamento.py  0007_pedido_datapagamento.py  0007_remove_pedido_produtos_pedido_produtos.py  0008_alter_produto_volume.py  0008_remove_itenscompra_compra_remove_itenscompra_produto_and_more.py  0009_alter_produto_volume.py  0009_pedido_status_pedido_usuario.py  0010_remove_pedido_representante_itenspedido.py  0011_remove_pedido_produtos.py
fiberblu/models/: __init__.py  categoriaEmpresa.py  categoriaProduto.py  compra.py  empresa.py  grupoProduto.py  linhaProduto.py  pagamento.py  pedido.py  produto.py  representante.py
fiberblu/serializers/: __init__.py  categoriaEmpresa.py  categoriaProduto.py  compra.py  empresa.py  grupoProduto.py  linhaProduto.py  pagamento.py  pedido.py  produto.py  representante.py
fiberblu/views/: __init__.py  categoriaEmpresa.py  categoriaProduto.py  compra.py  empresa.py  grupoProduto.py  linhaProduto.py  pagamento.py  pedido.py  produto.py  representante.py
usuario/migrations/: 0001_initial.py
